stripe payment method

--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -23,6 +23,7 @@
         <div class="flex space-x-4">
             <!-- Client specific content goes here -->
             <a href="{% url 'services:request_service' %}" class="py-4 px-6 bg-blue-600 rounded-xl text-white">Request Services </a>
+            <a href="{% url 'services:make_payment' %}" class="py-4 px-6 bg-blue-600 rounded-xl text-white">Payment</a>
             <a href="{% url 'services:request_list' %}" class="py-4 px-6 bg-blue-600 rounded-xl text-white">Requested list </a>
             <div class="w-full bg-gray-100 rounded-xl">
                 <h2 class="text-lg">Client Section</h2>
