--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -9,7 +9,9 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://js.stripe.com/v3/"></script>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+
 
 
     <title>{% block title %}{% endblock %}</title>
@@ -75,6 +77,7 @@
     <footer class="py-8 text-center bg-gray-200">
         <p class="text-xs text-gray-700">Copyright (c) 2023 - Laboratorio de Sanidad Animal</p>
     </footer>
+    {% block additional_scripts %}{% endblock %}
 </body>
 
 </html>
@@ -146,5 +149,80 @@
         notificationButton.textContent = `Notifications (${notifications.length})`;
     }
 
-    document.addEventListener('DOMContentLoaded', fetchNotifications);  
+    document.addEventListener('DOMContentLoaded', fetchNotifications);
+
+
+    document.addEventListener('DOMContentLoaded', function () {
+        const stripe = Stripe('pk_test_51OQE8fAJHwuZWWo7yJ6CBbMmVWR2Hn8zvVfCYIY29H1hIrQlvA0NiT6yqUUQIjH5fI0vYg194om82vUdtN9aQ92A00TRGfDO1P');
+        const elements = stripe.elements();
+        const card = elements.create('card');
+        card.mount('#card-element');
+
+        card.on('change', function (event) {
+            const displayError = document.getElementById('card-errors');
+            if (event.error) {
+                displayError.textContent = event.error.message;
+            } else {
+                displayError.textContent = '';
+            }
+        });
+
+        const form = document.getElementById('payment-form');
+        form.addEventListener('submit', function (event) {
+            event.preventDefault();
+            fetchClientSecret().then(function (clientSecret) {
+                stripe.confirmCardPayment(clientSecret, {
+                    payment_method: { card: card }
+                }).then(function (result) {
+                    console.log('confirmCardPayment response:', result);
+                    if (result.error) {
+                        console.log('Payment error:', result.error.message);
+                    } else {
+                        console.log('Payment succeeded:', result.paymentIntent.id);
+                        axios.post("{% url 'services:payment_success' %}", {
+                            payment_id: result.paymentIntent.id
+                        }, {
+                            headers: {
+                                'X-Requested-With': 'XMLHttpRequest',
+                                'X-CSRFToken': getCsrfToken()
+                            }
+                        }).then(function (response) {
+                            console.log(response.data.message);
+                            // Redirect to the success page
+                            window.location.href = "{% url 'services:payment_succeed' %}";  // Replace with your success page URL
+                        }).catch(function (error) {
+                            console.error('Error notifying backend:', error);
+                            // Handle error...
+                        });
+
+                    }
+                }).catch(function (error) {
+                    console.error('Error after confirming card payment:', error);
+                });
+            }).catch(function (error) {
+                console.error('Error fetching client secret:', error);
+            });
+        });
+    });
+
+    function getCsrfToken() {
+        const csrfTokenElement = document.querySelector('[name=csrfmiddlewaretoken]');
+        return csrfTokenElement ? csrfTokenElement.value : '';
+    }
+
+    function fetchClientSecret() {
+        const csrfToken = getCsrfToken();
+        return axios.post("{% url 'services:make_payment' %}", {}, {
+            withCredentials: true,
+            headers: {
+                'X-Requested-With': 'XMLHttpRequest',
+                'X-CSRFToken': csrfToken
+            }
+        }).then(function (response) {
+            return response.data.client_secret;
+        }).catch(function (error) {
+            console.error('Error fetching client secret:', error);
+            // Consider handling the error instead of throwing it
+        });
+    }
 </script>
